--- a/Tivi/app/build.gradle
+++ b/Tivi/app/build.gradle
@@ -46,14 +46,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
-
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
 
+
+
+
     kapt "com.android.databinding:compiler:4.1.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation 'com.google.dagger:dagger:2.31.2'
     kapt 'com.google.dagger:dagger-compiler:2.31.2'
